--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
     background: url(../images/assets.jpg);
     height: 600px;
     text-align: center;
-    background-size: contain;
+    background-size: cover;
     color: white;
     padding: 270px;
     
@@ -20,7 +20,6 @@ body {
 .personal{
     background: url(../images/c_image.jpg);
     
-    
     height: 600px;
     text-align: center;
     padding: 140px;
@@ -30,6 +29,7 @@ body {
 }
 .about{
     background: url(../images/computer.jpg);
+    background-size: cover;
     height: 200px;
     text-align: center;
     color: white;
@@ -51,4 +51,26 @@ body {
 }
 .obtis{
     text-align: center;
+}
+
+.whendo{
+
+    display: none;
+}
+.whydo{
+    display: none;
+}
+.willdo{
+    display: none;
+}
+
+.clickable3 {
+    font-size: 10px;
+}
+.clickable2{
+    font-size: 10px;
+}
+.clickable1{
+    font-size: 10px;
+
 }
