--- a/css/style.css
+++ b/css/style.css
@@ -194,6 +194,12 @@ body {
     height: 200px;
     background-color: rgba(0, 0,0, 0) !important
 }
+#mce-EMAIL{
+    background-color: rgba(0,0,0,0) !important
+}
+#name{
+    background-color: rgba(0,0,0,0) !important
+}
 
 
 
